# demand-forecasting-api

./: README.md  forecast.py  pyproject.toml  requirements.txt  test_api.py
